<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
    android:background="@color/teal_200">
    <ImageView
        android:id="@+id/imgfoodRunner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/food_runner"/>
    <TextView
        android:id="@+id/txtEnter"
        android:layout_below="@id/imgfoodRunner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/enter_your_registered_mobilenumber_and_email_address"
        />
    <EditText
        android:id="@+id/txtMobile"
        android:layout_below="@id/txtEnter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
       android:textColor="@color/black"
        android:hint="@string/mobile_number_10_digits"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/HINT"
        android:drawableLeft="@drawable/ic_phone"
        android:background="#ffff"/>
    <EditText
        android:id="@+id/txtEmail"
        android:layout_below="@id/txtMobile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:hint="@string/email_address"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColorHint="@color/HINT"
        android:drawableStart="@drawable/ic_email"
        android:background="#ffff"/>
    <Button
        android:id="@+id/Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:text="@string/next"/>



</RelativeLayout>