<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".activity.RegisterScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"

        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="#ffff"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/name_min_3_characters"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/enter_mobile_number_10_digits"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#ffff"
                android:drawableStart="@drawable/ic_location"
                android:hint="@string/delivery_address"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password_min_4_characters"
               android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:background="#e71c23"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>